<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="visible">

        <ImageView
            android:id="@+id/image_rec"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/icon_rec"
            android:src="@drawable/rec" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/textFileName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:autofillHints=""
                    android:gravity="right"
                    android:inputType="number"
                    android:minWidth="64dp"
                    android:minHeight="48dp"
                    android:text="@string/_0"
                    tools:ignore="LabelFor,RtlHardcoded,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/buttonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_dialog"
                    tools:ignore="NestedWeights,TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageSave"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/saved"
            app:srcCompat="@drawable/save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/accValue" />

        <TextView
            android:id="@+id/gyrValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/graValue" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/accChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

    </com.github.mikephil.charting.charts.LineChart>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/gyrChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

    </com.github.mikephil.charting.charts.LineChart>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:text="@string/buttonStart"
        tools:ignore="VisualLintButtonSize,VisualLintBounds" />

</LinearLayout>